feat: remember last channel

--- a/templates/iptv.html
+++ b/templates/iptv.html
@@ -17,7 +17,7 @@
     style="width:100%;height:100%"
     data-setup="{}"
   >
-    <source src="http://ottrrs.hl.chinamobile.com/PLTV/88888888/224/3221226019/index.m3u8" type="application/x-mpegURL" />
+  <source src="{{ url }}" type="application/x-mpegURL" />
     <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a
       web browser that
@@ -28,6 +28,12 @@
   </video>
 
   <script>
+	function auto_play() {
+	    jQuery.post("auto_play");
+	}
+	function full_screen() {
+	    jQuery.post("full_screen");
+	}
     function get_m3u8() {
       jQuery.get("get_m3u8", function(data, status){
             if (data.startsWith('http')){
@@ -43,6 +49,8 @@
       });
     }
     setInterval(get_m3u8, 500);
+	setTimeout(auto_play, 1000);
+	setTimeout(full_screen, 5000);
   </script>
   <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
 </body>
